--- a/exercícios/ex022/fundo006.html
+++ b/exercícios/ex022/fundo006.html
@@ -9,12 +9,22 @@
     <style>
 
         body {
+            height: 100vh;
             background-color: black;
+            background-image: url(imagens/wallpaper002.jpg);
+            background-position: center center;
+            background-repeat: repeat-y;
+            background-size: cover;
+
         }
 
         main {
             background-color: white;
             width: 400px;
+            padding: 10px;
+            margin: auto;
+            border: 1px solid darkblue;
+            border-radius: 15px;
         }
         
     </style>
