Atualizei projeto "desafio10"
Inseri informações no "aside" do index.html, sobre incompatibilidade com mobile;
Atualizei o header + nav, para melhor visualização no mobile;
Criei botão para retornar ao topo;

--- a/desafios/desafio10/android.html
+++ b/desafios/desafio10/android.html
@@ -10,18 +10,13 @@
 </head>
 <body>
     <header>
-            <h1>
-                CURIOSIDADES DE TECNOLOGIA
-            </h1>
-            <p>
-                Tudo aquilo que você sempre quis saber sobre o mundo Tech, em um único lugar.
-            </p>
+        <h1>CURIOSIDADES DE TECNOLOGIA</h1>
+        <p>Tudo aquilo que você sempre quis saber sobre o mundo Tech, em um único lugar.</p>
     </header>
 
     <nav>
         <a href="#" class="menu-link">Home</a>
-        <a href="#" class="menu-link">Notícias</a>
-        <a href="#" class="menu-link">Curiosidades</a>
+        <a href="noticias.html" class="menu-link">Notícias</a>
         <a href="faleconosco.html" class="menu-link">Fale Conosco</a>
     </nav>
 
@@ -84,7 +79,7 @@
                         Outro assunto curioso em relação ao Android é que cada versão sempre foi nomeada em homenagem a um doce, em ordem alfabética a partir da versão 1.5 até a 9.0. 
                     </p>
                     <p>
-                        Para descobrir o nome do doce em português (Brasil), passe o mouse por cima de cada um:
+                        Para descobrir o nome do doce em português (Brasil), passe o mouse por cima de cada um: <br><span class="spanDesktop">(somente para navegadores desktop)</span>
                     </p>
 
                     <ul>
@@ -117,8 +112,14 @@
                 </aside>
         </article>
     </main>
+
+    <a href="#" class="btn-fixed"> <!--&#6950;-->
+     <img src="imagens/VoltarTopo.png" alt="" class="btn-img">
+    </a>
+
     <footer>
         <p>Site/Projeto feito por <strong>Matheus Soares Gonçalves</strong> para o "Desafio 010" do curso de HTML5 e CSS3 do <strong><a href="https://www.cursoemvideo.com/" target="_blank">Cursoemvideo</a></strong> criado por <strong><a href="https://gustavoguanabara.github.io/" target="_blank">Gustavo Guanabara</a></strong></p>
     </footer>
+    
 </body>
 </html>
