--- a/desafios/desafio10/noticias.html
+++ b/desafios/desafio10/noticias.html
@@ -26,7 +26,8 @@
 
     <main>
         <article class="emconstrucao">
-                <p>PÁGINA DE CONTATO EM CONSTRUÇÃO...</p>
+                <p>PÁGINA DE NOTÍCIAS EM CONSTRUÇÃO...</p>
+            
                 <aside>
                     
                     <h3>
