--- a/desafios/desafio10/android.html
+++ b/desafios/desafio10/android.html
@@ -113,9 +113,9 @@
         </article>
     </main>
 
-    <a href="#" class="btn-fixed"> <!--&#6950;-->
+    <!-- <a href="#" class="btn-fixed">
      <img src="imagens/VoltarTopo.png" alt="" class="btn-img">
-    </a>
+    </a> -->
 
     <footer>
         <p>Site/Projeto feito por <strong>Matheus Soares Gonçalves</strong> para o "Desafio 010" do curso de HTML5 e CSS3 do <strong><a href="https://www.cursoemvideo.com/" target="_blank">Cursoemvideo</a></strong> criado por <strong><a href="https://gustavoguanabara.github.io/" target="_blank">Gustavo Guanabara</a></strong></p>
