Atualizei ex022 e desafio011

--- a/desafios/desafio009/index.html
+++ b/desafios/desafio009/index.html
@@ -6,10 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>Desafio 009</title>
+    <style>
+        body {
+            background-color: black;
+        }
+        h1 {
+            color: white;
+            text-align: center;
+        }
+        div {
+            display: flex;
+            justify-content: center;
+        }
+
+        a {
+            border: 5px solid white;
+            border-radius: 10px;
+        }
+
+    </style>
 </head>
 <body>
     <h1>Vídeos legais para assistir</h1>
-    <a href="video1.html"><img src="progresso.png" alt="Expansão Astronauta"></a>
+    <div><a href="video1.html"><img src="progresso.png" alt="Expansão Astronauta"></a></div>
   
 </body>
 </html>
