--- a/desafios/desafio009/video1.html
+++ b/desafios/desafio009/video1.html
@@ -5,27 +5,85 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
+
+        * {
+            margin: 0;
+            padding: 0;
+        }
+
         body{
             background-color: black;
+            background-image: url(espaco-1280x720.jpeg);
+            background-position: 100% 100%;
+            background-repeat: no-repeat;
+            background-size: cover;
         }
+
         h1{
+            font-family: Arial, Helvetica, sans-serif;
             color: white;
             text-align: center;
         }
+
         p{
             text-align: center;
         }
-        video {
-                margin: 0 auto;
+
+        div {
+            margin: auto;
+            border-radius: 10px;
+            padding: 20px;
+            max-width: 600px;
+            background-color: rgba(211, 211, 211, 0.4);
+            display: flex;
+            justify-content: center;
+            flex-direction: column;
+        }
+
+        .video {
+            border: 2px solid white;
+            border-radius: 10px;
+                align-self: center;
                 width: 500px;
         }
+
+        span {
+            color: white;
+        }
+
+        #canal {
+            color: white;
+            text-decoration: none;
+            font-weight: 700;
+            transition: .5s;
+        }
+
+        #canal:hover {
+            padding: 5px;
+            text-decoration: underline;
+            border: 1px solid white;
+            border-radius: 5px;
+            background-color:rgb(24, 27, 170)
+        }
+
     </style>
     <title>Desafio 009</title>
 </head>
 <body>
+
     <h1>NASA FALA SOBRE A NAVE ESTELAR DA SPACEX | STARSHIP UPDATES</h1>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/K-JCj5QKvAo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    <br>Acesse o canal <a href="https://www.youtube.com/channel/UC_7e8TJhyU_84USJuHMWJ0g" target="_blank" rel="external">Expansão Astronauta</a>
+
+    <div>
+
+        <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/K-JCj5QKvAo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+        <br>
+
+        <span>Acesse o canal</span>
+        
+        <a id="canal" href="https://www.youtube.com/channel/UC_7e8TJhyU_84USJuHMWJ0g" target="_blank" rel="external">Expansão Astronauta</a>
+
+    </div>
     <p><a href="index.html"><img src="voltar.png" alt="Botão de voltar"></a></p>
   </body>
 </html>
