desafio013 e exercícios de tabelas
Criei e atualizei os exercícios de tabela; criei os desafios de tabela; criei o teclado numérico pra treinar tabelas mescladas (colspan; rowspan).

--- a/exercícios/ex023/tabela002.html
+++ b/exercícios/ex023/tabela002.html
@@ -13,6 +13,7 @@
     table {
       width: 300px;
       border-collapse: collapse;
+      position: relative;
       
     }
 
@@ -23,7 +24,7 @@
     }
 
     thead, tfoot {
-      background-color: gray;
+      background-color: rgb(65, 65, 65);
       color: white;
       
     }
@@ -38,6 +39,17 @@
 
     .num {
       text-align: right;
+    }
+
+    thead > tr > th {
+      position: sticky;
+      background-color: rgb(65, 65, 65);
+      top: -1px;
+    }
+
+    tbody > tr:nth-child(2n) { 
+      /*EFEITO ZEBRADO */ /*odd (2n-1) = ímpar; even (2n) = par */
+      background-color: lightgray;
     }
 
   </style>
@@ -77,6 +89,86 @@
       <td>Rio de Janeiro</td>
       <td class="num">17.264.943</td>
     </tr>
+    <tr>
+      <td>Rio de Janeiro</td>
+      <td class="num">17.264.943</td>
+    </tr>
+    <tr>
+      <td>Rio de Janeiro</td>
+      <td class="num">17.264.943</td>
+    </tr>
+    <tr>
+      <td>Rio de Janeiro</td>
+      <td class="num">17.264.943</td>
+    </tr>
+    <tr>
+      <td>Rio de Janeiro</td>
+      <td class="num">17.264.943</td>
+    </tr>
+    <tr>
+      <td>Rio de Janeiro</td>
+      <td class="num">17.264.943</td>
+    </tr>
+    <tr>
+      <td>Rio de Janeiro</td>
+      <td class="num">17.264.943</td>
+    </tr>
+    <tr>
+      <td>Rio de Janeiro</td>
+      <td class="num">17.264.943</td>
+    </tr>
+    <tr>
+      <td>Rio de Janeiro</td>
+      <td class="num">17.264.943</td>
+    </tr>
+    <tr>
+      <td>Rio de Janeiro</td>
+      <td class="num">17.264.943</td>
+    </tr>
+    <tr>
+      <td>Rio de Janeiro</td>
+      <td class="num">17.264.943</td>
+    </tr>
+    <tr>
+      <td>Rio de Janeiro</td>
+      <td class="num">17.264.943</td>
+    </tr>
+    <tr>
+      <td>Rio de Janeiro</td>
+      <td class="num">17.264.943</td>
+    </tr>
+    <tr>
+      <td>Rio de Janeiro</td>
+      <td class="num">17.264.943</td>
+    </tr>
+    <tr>
+      <td>Rio de Janeiro</td>
+      <td class="num">17.264.943</td>
+    </tr>
+    <tr>
+      <td>Rio de Janeiro</td>
+      <td class="num">17.264.943</td>
+    </tr>
+    <tr>
+      <td>Rio de Janeiro</td>
+      <td class="num">17.264.943</td>
+    </tr>
+    <tr>
+      <td>Rio de Janeiro</td>
+      <td class="num">17.264.943</td>
+    </tr>
+    <tr>
+      <td>Rio de Janeiro</td>
+      <td class="num">17.264.943</td>
+    </tr>
+    <tr>
+      <td>Rio de Janeiro</td>
+      <td class="num">17.264.943</td>
+    </tr>
+    <tr>
+      <td>Rio de Janeiro</td>
+      <td class="num">17.264.943</td>
+    </tr>
   </tbody>
 
   <tfoot>
@@ -87,6 +179,16 @@
   </tfoot>
 
 </table>
+
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi et natus veritatis harum rerum nam? Amet reprehenderit nobis ab aperiam. Cupiditate aperiam illum nemo excepturi illo exercitationem fuga autem iusto. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Distinctio error officiis corporis natus, sed consectetur praesentium dolorum tempore? Nulla consequatur qui, possimus saepe officiis harum optio. Ut eligendi quo nam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto totam odio, nam illum quos eius iure aperiam, ducimus itaque similique cupiditate explicabo ipsam ipsum quibusdam magni voluptate delectus est voluptatem! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore animi possimus dolorum impedit libero sequi, soluta sit molestiae, ab ipsum consequatur reiciendis maxime voluptatem ratione consequuntur asperiores tempore voluptate rerum.</p>
+
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi et natus veritatis harum rerum nam? Amet reprehenderit nobis ab aperiam. Cupiditate aperiam illum nemo excepturi illo exercitationem fuga autem iusto. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Distinctio error officiis corporis natus, sed consectetur praesentium dolorum tempore? Nulla consequatur qui, possimus saepe officiis harum optio. Ut eligendi quo nam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto totam odio, nam illum quos eius iure aperiam, ducimus itaque similique cupiditate explicabo ipsam ipsum quibusdam magni voluptate delectus est voluptatem! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore animi possimus dolorum impedit libero sequi, soluta sit molestiae, ab ipsum consequatur reiciendis maxime voluptatem ratione consequuntur asperiores tempore voluptate rerum.</p>
+
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi et natus veritatis harum rerum nam? Amet reprehenderit nobis ab aperiam. Cupiditate aperiam illum nemo excepturi illo exercitationem fuga autem iusto. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Distinctio error officiis corporis natus, sed consectetur praesentium dolorum tempore? Nulla consequatur qui, possimus saepe officiis harum optio. Ut eligendi quo nam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto totam odio, nam illum quos eius iure aperiam, ducimus itaque similique cupiditate explicabo ipsam ipsum quibusdam magni voluptate delectus est voluptatem! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore animi possimus dolorum impedit libero sequi, soluta sit molestiae, ab ipsum consequatur reiciendis maxime voluptatem ratione consequuntur asperiores tempore voluptate rerum.</p>
+
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi et natus veritatis harum rerum nam? Amet reprehenderit nobis ab aperiam. Cupiditate aperiam illum nemo excepturi illo exercitationem fuga autem iusto. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Distinctio error officiis corporis natus, sed consectetur praesentium dolorum tempore? Nulla consequatur qui, possimus saepe officiis harum optio. Ut eligendi quo nam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto totam odio, nam illum quos eius iure aperiam, ducimus itaque similique cupiditate explicabo ipsam ipsum quibusdam magni voluptate delectus est voluptatem! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore animi possimus dolorum impedit libero sequi, soluta sit molestiae, ab ipsum consequatur reiciendis maxime voluptatem ratione consequuntur asperiores tempore voluptate rerum.</p>
+
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi et natus veritatis harum rerum nam? Amet reprehenderit nobis ab aperiam. Cupiditate aperiam illum nemo excepturi illo exercitationem fuga autem iusto. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Distinctio error officiis corporis natus, sed consectetur praesentium dolorum tempore? Nulla consequatur qui, possimus saepe officiis harum optio. Ut eligendi quo nam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto totam odio, nam illum quos eius iure aperiam, ducimus itaque similique cupiditate explicabo ipsam ipsum quibusdam magni voluptate delectus est voluptatem! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore animi possimus dolorum impedit libero sequi, soluta sit molestiae, ab ipsum consequatur reiciendis maxime voluptatem ratione consequuntur asperiores tempore voluptate rerum.</p>
 
 </body>
 </html>
