--- a/exercícios/ex023/tabela004.html
+++ b/exercícios/ex023/tabela004.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,7 +15,11 @@
 
     td, th {
       padding: 2px;
-      border: 1px solid black;
+      border: 1px solid rgba(0, 0, 0);
+    }
+
+    tr:nth-child(3n) {
+      border: 1.5px solid black;
     }
 
   </style>
@@ -24,12 +28,12 @@
   
 <table>
   <tr>
-    <th>Grupo</th>
-    <th>Nomes</th>
-    <th colspan="3">Filmes</th>
+    <th scope="row">Grupo</th>
+    <th scope="row">Nomes</th>
+    <th colspan="3" scope="colgroup">Filmes</th>
   </tr>
   <tr>
-    <th rowspan="3">Mulheres</th>
+    <th rowspan="3" scope="rowgroup">Mulheres</th>
     <td>Ana Maria Santos</td>
     <td>Alien</td>
     <td>Rambo</td>
@@ -48,7 +52,7 @@
     <td>Big Hero</td>
   </tr>
   <tr>
-    <th rowspan="3">Homens</th>
+    <th rowspan="3" scope="rowgroup">Homens</th>
     <td>Bruno Mendonça</td>
     <td>Intocáveis</td>
     <td>Amnésia</td>
@@ -66,6 +70,12 @@
     <td>Taxi Drive</td>
     <td>Toy Story</td>
   </tr>
+  <tfoot>
+    <tr>
+      <th colspan="4" scope="row" >TOTAL</th>
+      <td>0000000</td>
+    </tr>
+  </tfoot>
 </table>
 
 </body>
