--- a/exercícios/ex023/tabela005.html
+++ b/exercícios/ex023/tabela005.html
@@ -25,11 +25,34 @@
       border: 1px solid black;
       padding: 8px;
     }
+
+    col.cnome {
+      background-color: rgb(176, 255, 255);
+    }
+
+    col.csexo {
+      background-color: rgb(250, 248, 215);
+    }
+
   </style>
 </head>
 <body>
   <h1>Exercício de tabelas</h1>
 <table>
+
+  <colgroup>
+    <col class="cnome">
+    <col class="csexo">
+    <col class="cidade">
+    <col class="cprof">
+
+    <!-- configurações para mais de uma coluna, adicionasse um "span":
+
+    <col class="cnome">
+    <col class="csexo" span="3"> adiciona a ocnfiguração para 3 colunas seguintes.
+     -->
+  </colgroup>
+
   <caption>Cadastro</caption>
   <tr>
     <th scope="col">Nome</th>
@@ -42,6 +65,36 @@
     <td>F</td>
     <td>25</td>
     <td>Jornalista</td>
+  </tr>
+  <tr>
+    <td>Cláudio</td>
+    <td>M</td>
+    <td>28</td>
+    <td>Programador</td>
+  </tr>
+  <tr>
+    <td>Gustavo</td>
+    <td>M</td>
+    <td>42</td>
+    <td>Professor</td>
+  </tr>
+  <tr>
+    <td>Hélio</td>
+    <td>M</td>
+    <td>19</td>
+    <td>Vendedor</td>
+  </tr>
+  <tr>
+    <td>Maria</td>
+    <td>F</td>
+    <td>39</td>
+    <td>Médica</td>
+  </tr>
+  <tr>
+    <td>Otávio</td>
+    <td>M</td>
+    <td>22</td>
+    <td>Nutricionista</td>
   </tr>
 </table>
 
