--- a/desafios/desafio10/android.html
+++ b/desafios/desafio10/android.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
     <title>História do Símbolo do Android</title>
+   
 </head>
 <body>
     <header>
@@ -88,7 +89,7 @@
                         <li class="btn-cel"><a href="android-extra/android-cel.html" target="frame">Smartphone</a></li>
                     </ul>
 
-                   <div><iframe src="" name="frame" frameborder="0" id="frame" width="790px" height="350px"> Infelizmente seu navegador não possui suporte para o conteúdo apresentado.</iframe></div>
+                   <div><iframe src="android-extra/android-pc.html" name="frame" frameborder="0" id="frame" width="790px" height="450px"> Infelizmente seu navegador não possui suporte para o conteúdo apresentado.</iframe></div>
 
                 </aside>
         </article>
