--- a/desafios/desafio003/index.html
+++ b/desafios/desafio003/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Desafio do Mapa</title>
 </head>
+
 <body>
     <h1>Desafio do Mapa</h1>
-    <p>Agora chegou a hora de treinar um pouco o uso de <strong>imagens</strong>, <strong>parágrafos</strong> e <strong>quebras de linhas</strong>.</p>
+    <p>Agora chegou a hora de treinar um pouco o uso de <strong>imagens</strong>, <strong>parágrafos</strong> e
+        <strong>quebras de linhas</strong>.</p>
     <img src="mapa03.png" alt="Canadá">
     <img src="mapa07.png" alt="Groenlândia">
     <img src="mapa05.png" alt="Rússia">
@@ -19,4 +22,5 @@
     <img src="mapa02.png" alt="África sul">
     <img src="mapa04.png" alt="Oceania">
 </body>
+
 </html>
